website theme for medical uses

--- a/Medical.html
+++ b/Medical.html
@@ -25,7 +25,8 @@
         }
 
         #topbar {
-            background-color: rgb(64, 186, 190);
+            background-color: rgb(4 22 84);
+            color: white;
             padding: 3px 3px;
         }
 
@@ -35,7 +36,7 @@
         }
 
         .navbar {
-            background: #f8f9fa;
+            background: orange;
             margin-top: 30px;
         }
 
@@ -45,7 +46,7 @@
         }
 
         .nav-link {
-            color: #626262;
+            color: white;
             font-size: 13px;
             text-transform: uppercase;
             padding: 10px 0 10px 30px;
@@ -53,27 +54,45 @@
         }
 
         .nav-link:hover {
-            color: rgb(64, 186, 190);
+            color: rgb(4 22 84);
             font-weight: bolder;
         }
 
         .dropdown-menu {
-            background: #f8f9fa;
+            background: orange;;
         }
 
+        .dropdown-item {
+            color: white;
+            font-weight: 600;
+            
+        }
         .dropdown-item:hover {
-            color: rgb(64, 186, 190);
-            font-weight: bolder;
+            color: white;
+            background-color: rgb(4, 22, 84);
+        }
+        .navbar-nav .nav-item .nav-link {
+            border-radius: 30px;
+            background: rgb(4, 22, 84);
+            color: white;
+            padding: 10px 13px;
+        }
+        .navbar-nav .nav-item {
+            margin: 0px 5px;
         }
 
         .appointment-btn {
-            background-color: rgb(64, 186, 190);
+            background-color: rgb(4, 22, 84);
             text-decoration: none;
             padding: 12px 30px;
             margin-right: 70px;
-            border-radius: 4px;
             color: white;
+            border-radius: 36px;
 
+        }
+        .appointment-btn:hover {
+            color: white;
+            text-decoration: none;
         }
 
         #fog {
@@ -84,7 +103,7 @@
 
         .card-body i {
             width: 100%;
-            color: rgb(64, 186, 190);
+            color: rgb(4, 22, 84);
             font-size: 50px;
             padding: 16px 0px;
         }
@@ -104,14 +123,14 @@
         }
 
         #fog .card:hover {
-            background-color: rgb(98, 205, 209);
+            background-color: #F04423;
             animation: 3s ease-in backInUp;
             color: white;
 
         }
 
         #fog .card:hover .card-body i {
-            color: white;
+            color: #70E3F1;
         }
 
         .animate__backInUp {
@@ -119,7 +138,7 @@
         }
 
         #help {
-            background-color: rgb(98, 205, 209);
+            background-color: rgb(203 26 26);
             height: auto;
             text-align: center;
             padding: 44px 46px;
@@ -205,7 +224,8 @@
             position: absolute;
             display: block;
             left: calc(50% - 25px);
-            background: rgb(98, 205, 209);
+            background: rgb(4, 22, 84);
+            
 
 
         }
