--- a/Medical.html
+++ b/Medical.html
@@ -226,8 +226,11 @@
             left: calc(50% - 25px);
             background: rgb(4, 22, 84);
             
-
-
+        }
+        .carousel-item img {
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
         }
 
         #again-cards {
@@ -360,7 +363,7 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active" data-interval="1500">
-                    <img src="images/slide-1.jpg" class="image-fluid w-100" alt="">
+                    <img src="images/700.jpeg" class="image-fluid w-100" alt="">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>First Slide</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
@@ -368,14 +371,14 @@
 
                 </div>
                 <div class="carousel-item" data-interval="1500">
-                    <img src="images/slide-2.jpg" class="image-fluid w-100" alt="">
+                    <img src="images/a2.jpeg" class="image-fluid w-100" alt="">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Second Slide</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
                     </div>
                 </div>
                 <div class="carousel-item" data-interval="1500">
-                    <img src="images/slide-3.jpg" class="image-fluid w-100" alt="">
+                    <img src="images/528.jpeg" class="image-fluid w-100" alt="">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Third</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
